[gd_scene load_steps=23 format=3 uid="uid://ctah4a62uicsr"]

[ext_resource type="Script" path="res://Enemies/Scripts/EnemyController.gd" id="1_exjgg"]
[ext_resource type="Texture2D" uid="uid://cnfsx1070f5on" path="res://Enemies/Sprites/shielderEnemy.png" id="2_duyna"]
[ext_resource type="Texture2D" uid="uid://mgj6axcwfnc3" path="res://Enemies/Sprites/shielderEnemyShielding.png" id="3_vnovu"]
[ext_resource type="Texture2D" uid="uid://btho6rt15jl8m" path="res://Enemies/Sprites/shielderEnemyShield.png" id="4_gh761"]
[ext_resource type="Script" path="res://Enemies/Scripts/EnemyHealth.gd" id="4_m8tui"]
[ext_resource type="Script" path="res://Enemies/Scripts/EnemyMovement.gd" id="5_rxfv0"]
[ext_resource type="Script" path="res://Enemies/Scripts/EnemyRepelled.gd" id="6_psjxy"]
[ext_resource type="Script" path="res://Enemies/Scripts/EnemyShielded.gd" id="7_p0pxy"]
[ext_resource type="Script" path="res://Enemies/Scripts/EnemyRotator.gd" id="7_tptxh"]
[ext_resource type="Script" path="res://WeaponTool/Scripts/ExecuteAttack.gd" id="8_kkojn"]
[ext_resource type="Script" path="res://WeaponTool/Scripts/ObjectSpawner.gd" id="9_k4uc8"]
[ext_resource type="Script" path="res://Enemies/Scripts/EnemyDetection.gd" id="11_u72jk"]
[ext_resource type="Script" path="res://Enemies/Scripts/EnemyShielding.gd" id="11_yk7xc"]
[ext_resource type="Script" path="res://BehaviorTree/Scripts/BehaviorTree.gd" id="12_3iutp"]
[ext_resource type="Script" path="res://BehaviorTree/Scripts/BT_Sequence.gd" id="13_nse1o"]
[ext_resource type="Script" path="res://Enemies/Scripts/BehaviorTree/TaskEnemyRepelled.gd" id="14_3uc3q"]
[ext_resource type="Script" path="res://Enemies/Scripts/BehaviorTree/TaskEnemyIsAttacking.gd" id="15_71qeo"]
[ext_resource type="Script" path="res://Enemies/Scripts/BehaviorTree/TaskEnemyStartAttack.gd" id="16_rqupf"]
[ext_resource type="Script" path="res://Enemies/Scripts/BehaviorTree/TaskChasePlayer.gd" id="17_5kecq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2vjwt"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_j5l0v"]
radius = 832.038

[sub_resource type="CircleShape2D" id="CircleShape2D_n2qao"]
radius = 576.0

[node name="ShielderEnemy" type="CharacterBody2D" node_paths=PackedStringArray("enemyMovement", "enemyRepelled", "enemyRotator", "enemyAttack", "enemyHealth", "enemyShielded")]
script = ExtResource("1_exjgg")
enemyMovement = NodePath("EnemyMovement")
enemyRepelled = NodePath("EnemyRepelled")
enemyRotator = NodePath("EnemyRotator")
enemyAttack = NodePath("EnemyRotator/EnemyAttack")
enemyHealth = NodePath("EnemyHealth")
enemyShielded = NodePath("EnemyShielded")
attackDistance = 500.0
damageImmunityDuration = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2vjwt")

[node name="EnemySprite" type="Sprite2D" parent="."]
texture = ExtResource("2_duyna")

[node name="EnemySpriteShielding" type="Sprite2D" parent="."]
texture = ExtResource("3_vnovu")

[node name="ShieldSprite" type="Sprite2D" parent="."]
texture = ExtResource("4_gh761")

[node name="EnemyHealth" type="Node" parent="." node_paths=PackedStringArray("enemyController", "label")]
script = ExtResource("4_m8tui")
maxHealth = 15
enemyController = NodePath("..")
label = NodePath("../EnemyUI/Health")

[node name="EnemyMovement" type="Node" parent="." node_paths=PackedStringArray("enemyController", "navigationAgent")]
script = ExtResource("5_rxfv0")
enemyController = NodePath("..")
navigationAgent = NodePath("../NavigationAgent2D")
defaultMovementSpeed = 300.0
distanceTolerance = 30.0
repathTimerDuration = 0.25

[node name="EnemyRepelled" type="Node" parent="." node_paths=PackedStringArray("enemyController")]
script = ExtResource("6_psjxy")
enemyController = NodePath("..")

[node name="EnemyShielded" type="Node" parent="." node_paths=PackedStringArray("shieldSprite")]
script = ExtResource("7_p0pxy")
shieldSprite = NodePath("../ShieldSprite")

[node name="EnemyUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -32.0
offset_top = -64.0
offset_right = 32.0
offset_bottom = -32.0

[node name="Health" type="Label" parent="EnemyUI"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 32.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 100.0
max_speed = 300.0

[node name="EnemyRotator" type="Node2D" parent="." node_paths=PackedStringArray("enemyController", "enemyMovement", "pointer")]
script = ExtResource("7_tptxh")
enemyController = NodePath("..")
enemyMovement = NodePath("../EnemyMovement")
rotationOffset = 90.0
pointer = NodePath("Pointer")

[node name="Pointer" type="Node2D" parent="EnemyRotator"]
position = Vector2(0, -64)

[node name="EnemyAttack" type="Node2D" parent="EnemyRotator" node_paths=PackedStringArray("attackHitboxes", "attackSounds", "characterRef")]
script = ExtResource("8_kkojn")
attackDuration = 30
attackCooldown = 90
attackPhasesLaunch = Array[int]([0, 10, 20])
attackHitboxes = [NodePath("ObjectSpawner"), NodePath("ObjectSpawner2"), NodePath("ObjectSpawner3")]
attackSounds = [null, null, null]
attackMovements = Array[float]([-100.0, -100.0, -100.0])
characterRef = NodePath("../..")

[node name="ObjectSpawner" type="Node2D" parent="EnemyRotator/EnemyAttack"]
position = Vector2(0, -64)
script = ExtResource("9_k4uc8")
objectPath = "res://Enemies/projectile.tscn"

[node name="ObjectSpawner2" type="Node2D" parent="EnemyRotator/EnemyAttack"]
position = Vector2(-32, -48)
rotation = -0.785398
script = ExtResource("9_k4uc8")
objectPath = "res://Enemies/projectile.tscn"

[node name="ObjectSpawner3" type="Node2D" parent="EnemyRotator/EnemyAttack"]
position = Vector2(32, -48)
rotation = 0.785398
script = ExtResource("9_k4uc8")
objectPath = "res://Enemies/projectile.tscn"

[node name="EnemyDetection" type="Area2D" parent="." node_paths=PackedStringArray("enemyController", "normalSprite", "angrySprite")]
script = ExtResource("11_u72jk")
enemyController = NodePath("..")
normalSprite = NodePath("../EnemySprite")
angrySprite = NodePath("../EnemySpriteShielding")
stopSwapSprite = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetection"]
shape = SubResource("CircleShape2D_j5l0v")

[node name="EnemyShielding" type="Area2D" parent="." node_paths=PackedStringArray("controllerRef", "baseSprite", "shieldingSprite")]
script = ExtResource("11_yk7xc")
controllerRef = NodePath("..")
baseSprite = NodePath("../EnemySprite")
shieldingSprite = NodePath("../EnemySpriteShielding")
shieldCooldown = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyShielding"]
shape = SubResource("CircleShape2D_n2qao")
debug_color = Color(0.533333, 0.568627, 0.152941, 0.419608)

[node name="BehaviorTree" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("12_3iutp")
root = NodePath("BT_Sequence")

[node name="BT_Sequence" type="Node" parent="BehaviorTree" node_paths=PackedStringArray("children")]
script = ExtResource("13_nse1o")
children = [NodePath("TaskEnemyRepelled"), NodePath("TaskEnemyIsAttacking"), NodePath("TaskEnemyStartAttack"), NodePath("TaskChasePlayer")]

[node name="TaskEnemyRepelled" type="Node" parent="BehaviorTree/BT_Sequence" node_paths=PackedStringArray("enemyController")]
script = ExtResource("14_3uc3q")
enemyController = NodePath("../../..")

[node name="TaskEnemyIsAttacking" type="Node" parent="BehaviorTree/BT_Sequence" node_paths=PackedStringArray("enemyAttack", "enemyController")]
script = ExtResource("15_71qeo")
enemyAttack = NodePath("../../../EnemyRotator/EnemyAttack")
enemyController = NodePath("../../..")

[node name="TaskEnemyStartAttack" type="Node" parent="BehaviorTree/BT_Sequence" node_paths=PackedStringArray("enemyMovement", "enemyAttack", "enemyController")]
script = ExtResource("16_rqupf")
enemyMovement = NodePath("../../../EnemyMovement")
enemyAttack = NodePath("../../../EnemyRotator/EnemyAttack")
enemyController = NodePath("../../..")

[node name="TaskChasePlayer" type="Node" parent="BehaviorTree/BT_Sequence" node_paths=PackedStringArray("enemyDetection", "enemyMovement", "enemyController")]
script = ExtResource("17_5kecq")
enemyDetection = NodePath("../../../EnemyDetection")
enemyMovement = NodePath("../../../EnemyMovement")
enemyController = NodePath("../../..")

[connection signal="damaged" from="." to="EnemyHealth" method="_on_enemy_damaged"]
[connection signal="repelled" from="." to="EnemyMovement" method="_on_enemy_repelled"]
[connection signal="enemyDeath" from="EnemyHealth" to="EnemyShielding" method="_on_enemy_health_enemy_death"]
[connection signal="body_entered" from="EnemyDetection" to="EnemyDetection" method="_on_body_entered"]
[connection signal="body_entered" from="EnemyShielding" to="EnemyShielding" method="_on_body_entered"]
[connection signal="body_exited" from="EnemyShielding" to="EnemyShielding" method="_on_body_exited"]
